# dimba-lib-exp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD_COMPLETE.md  CHANGELOG.md  CLAUDE.md  GPU_TRAINING_GUIDE.md  GPU_TRAINING_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PR_SUMMARY.md  QUICK_START_GPU.md  README.md  calculate_optimization.py  config.yaml  install_deps.sh  install_l40s.sh  pyproject.toml  requirements.txt  setup_training.sh  test_dataset_size.py
.github/workflows/: ci.yml
configs/: fineweb_1.5b_l40s.yaml  fineweb_1b.yaml  fineweb_500m_a4000.yaml
docs/: BABYSIT_LOOP.md  BACKENDS.md  CDLM.md  IMPROVEMENT_PLAN.md  NEXT_RUN_PLAN.md  OVERHAUL_STATUS.md  PROGRESSIVE_CHECKPOINTING.md  RESEARCH_DIRECTIONS.md
notebooks/: kaggle_retrain_v2.ipynb  quickstart.py  train_colab.ipynb  train_shakespeare_kaggle.ipynb
paper/: main.txt
scripts/: README.md  benchmark.py  calculate_memory.py  distill.py  eval_vs_smollm.py  evaluate.py  generate.py  interactive_setup.py  monitor.py  perplexity_eval.py  sample_mlx.py  test_config.py  test_dataset_loading.py  train.py  train_4090.py  train_cdlm.py  train_fineweb_1b.py  train_fineweb_500m_a4000.py  train_h100.py  train_interactive.py  train_shakespeare.py  train_vae.py  upload_to_hf.py  verify_mlx_model.py
scripts/finetuning/: README.md  __init__.py  finetune_dpo.py  finetune_grpo.py  finetune_interactive.py  finetune_sft.py
scripts/setup/: install_a4000.sh
scripts/utils/: __init__.py  calculate_memory.py  test_config.py  test_dataset_loading.py
src/dimba/: __init__.py
src/dimba/backends/: __init__.py
src/dimba/data/: __init__.py  cot_dataset.py  dataset.py  finetuning.py  frontier_cot.py
src/dimba/diffusion/: __init__.py  corruption.py  masked_sampling.py  rerank.py  sampling.py  schedules.py
src/dimba/distillation/: __init__.py  (+6 more)
tests/: __init__.py  conftest.py  test_adaln_conditioning.py  test_arch_improvements.py  test_attn_head.py  test_audit_fixes.py  test_bpe_pipeline.py  test_corruption.py  test_dataset_tokenizer_compat.py  test_diffusion.py  test_diffusion_improvements.py  test_distillation.py  test_dpmpp_sampler.py  test_evalstack_and_corruption.py  test_finetuning_data.py  test_fineweb_streaming.py  test_imports.py  test_latent_norm.py  test_lora.py  test_mlx_flow_ffn_parity.py  test_mlx_mamba2.py  test_mlx_v2_parity.py  test_models.py  test_overhaul_core.py  test_override.py  test_parallel_scan.py  test_preference.py  test_rerank.py  test_self_conditioning.py  test_smoke.py  test_torch_mamba2.py  test_training.py  test_vae.py
(+31 files in other folders)
